[tool.poetry]
name = "fastapi-htmx"
version = "0.1.0"
description = "Demo of HTMX"
authors = ["Humphrey Drummond <hum3@drummond.info>"]
readme = "README.md"
packages = [{include = "fastapi_htmx"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
